Add structured directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
 <h1>{{title}}</h1>
-<p>{{'Hello' + ', world'}}</p>
-<p>{{2 + 3}}</p>
-<p>{{getTitle()}}</p>
-<p>{{title}} {{2+3}}</p>
-<app-todo-items></app-todo-items><br/>
-<app-pipes-test-component></app-pipes-test-component>
+<app-todo-items></app-todo-items>
